# meta-scripts

./: .dockerignore  .gitignore  Dockerfile  GenerateLegacyFabric.py  README.md  clone.sh  config.sh  enumerateForge.py  generateFabric.py  generateForge.py  generateLiteloader.py  generateMojang.py  generateNeoforge.py  generateOmniArchive.py  generateQuilt.py  libPatches.py  pyproject.toml  requirements.txt  update.sh  updateFabric.py  updateForge.py  updateLegacyFabric.py  updateLiteloader.py  updateMojang.py  updateNeoforge.py  updateQuilt.py
config/: readme.txt
meta/common/: forge.py  http.py  json.py  neoforge.py
meta/model/: __init__.py  mojang.py  neoforge.py
patches/: README.md  common.sh  generate.sh  glfw.sh  lwjgl3-linux.sh  matches.sh
static/mojang/: 3.2.2.json  library-patches.json
static/org.lwjgl3/: 3.2.2.json
