[tool.poetry]
name = "meta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
CacheControl = "^0.12.11"
requests = "^2.27.1"
lockfile = "^0.12.2"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
